fix: ensure note sharing actions are visible on Safari

--- a/src/site/_includes/postcss/_note-card.css
+++ b/src/site/_includes/postcss/_note-card.css
@@ -128,7 +128,7 @@
     }
 }
 
-.share-tools {
+.note-actions {
     display: flex;
     button,
     a {
